@@ -89,6 +89,7 @@ Collate:
     'rk.XML.wizard.R'
     'rk.build.plugin.R'
     'rk.get.language.R'
+    'rk.get.rkh.prompter.R'
     'rk.paste.JS.R'
     'rk.paste.JS.graph.R'
     'rk.plotOptions.R'
@@ -108,6 +109,7 @@ Collate:
     'rk.rkh.title.R'
     'rk.rkh.usage.R'
     'rk.set.language.R'
+    'rk.set.rkh.prompter.R'
     'rk.testsuite.doc.R'
     'rk.uniqueIDs.R'
     'rkwarddev-desc-internal.R'
