@@ -5,6 +5,9 @@ fixed:
   - the "show" feature in rk.plugin.skeleton() was broken due to changes in the namespace defaults
   - scanning plugin XML code for JS and help related content didn't work as expected in rk.plugin.component()
   - rk.rkh.scan() now also recognises <optioncolumn> and <matrix> nodes
+added:
+  - new functions rk.set.rkh.prompter() and rk.get.rkh.prompter() to make it easier to generate help files
+    (later...)
 
 changes in version 0.06-4 (2014-09-14)
 added:
